# Compiler

./: Cargo.toml
src/: intern_pool.rs  main.rs  rw_arc.rs  semantic_ast.rs  span.rs  syntactic_analysis.rs  syntax_ast.rs  token.rs
src/lexer/: identifier.rs  mod.rs  number.rs  punctuator.rs  skip.rs  string.rs  trie.rs  utils.rs
src/module/: definition.rs  mod.rs
src/semantic_parser/: mod.rs
src/syntactic_parser/: assignment.rs  conditional.rs  declaration.rs  expression.rs  file.rs  function.rs  loop.rs  match.rs  mod.rs  module.rs  return.rs  statement.rs  type_annotation.rs  type_definition.rs  utils.rs
src/syntactic_parser/snapshots/: Compiler__syntactic_parser__tests__basic.snap  Compiler__syntactic_parser__tests__basic.snap.new  Compiler__syntactic_parser__tests__loops.snap  Compiler__syntactic_parser__tests__match.snap  Compiler__syntactic_parser__tests__types.snap
