[package]
name = "Compiler"
version = "0.1.0"
edition = "2024"

[dependencies]
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.145"

[dev-dependencies]
insta = { version = "1.43.2", features = ["yaml"] }

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

